--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,5 +1,6 @@
 artifacts_root: artifacts
 
 data_ingestion:
+  root_dir: artifacts/data_ingestion
   source: henrydioniz/swahili-sms-detection-dataset
-  file_name: bongo_scam.csv
+  raw_data_path: artifacts/data_ingestion/bongo_scam.csv
