--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,27 @@
-pandas
-dvc
-scikit-learn
-mlflow
-notebook
-numpy
-matplotlib
-seaborn
-python-box==6.0.2
-pyYAML
-tqdm
+matplotlib==3.10.3
+dvc==3.59.2
 ensure==1.0.2
-joblib
-types-PyYAML
-scipy
-fastapi
-uvicorn
-wordcloud
-kagglehub
--e .
+fastapi==0.115.12
+h5py==3.13.0
+ipywidgets==8.1.7
+joblib==1.5.0
+kagglehub==0.2.9
+libclang==18.1.1
+mlflow==2.22.0
+numpy==2.2.5
+pandas==2.2.3
+PyYAML==6.0.2
+notebook==7.3.3
+python-box==6.0.2
+scikit-learn==1.6.1
+scipy==1.15.3
+seaborn==0.13.2
+sentence-transformers==4.1.0
+setuptools==78.1.1
+torch==2.7.0+cu118
+torchaudio==2.7.0+cu118
+torchvision==0.22.0+cu118
+tqdm==4.67.1
+types-PyYAML==6.0.12.20241230
+uvicorn==0.34.2
+wordcloud==1.9.4
